# Basic-Library-Management-System

./: .clang-format  CMakeLists.txt  README.md
docs/: sqls.txt
include/lms/: add_book_window.hpp  author.hpp  book.hpp  database.hpp  different_view_window.hpp  edit_book_window.hpp  main_window.hpp  query_window.hpp  sale.hpp  sorted_books_window.hpp
include/lms/database/: book.hpp  database.hpp
include/lms/gui/: add_book_window.hpp  different_view_window.hpp  edit_book_window.hpp  main_window.hpp  query_window.hpp  sorted_books_window.hpp
src/: add_book_window.cpp  author.cpp  book.cpp  database.cpp  different_view_window.cpp  edit_book_window.cpp  main.cpp  main_window.cpp  query_window.cpp  sale.cpp  sorted_window.cpp
src/database/: author.cpp  book.cpp  database.cpp  sale.cpp
src/gui/: add_book_window.cpp  different_view_window.cpp  edit_book_window.cpp  main_window.cpp  query_window.cpp  sorted_window.cpp
